# openapi-client-generator

./: Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  test_aiohttp.py  test_httpx.py
.github/workflows/: python-tests.yml
docs/: implementation.md  overview.md
openapi_client_generator/: __main__.py  helpers.py
openapi_client_generator/generator/: __init__.py  aiohttp_generator.py  base.py  httpx_generator.py  requests_generator.py
openapi_client_generator/parser/: __init__.py  models.py  openapi_parser.py
openapi_client_generator/templates/aiohttp/: client.py.jinja2
openapi_client_generator/templates/common/: __init__.py.jinja2  models.py.jinja2
openapi_client_generator/templates/httpx/: client.py.jinja2
openapi_client_generator/templates/requests/: client.py.jinja2
tests/: conftest.py  test_helpers.py
tests/test_generator/: test_requests_generator.py
tests/test_parser/: test_model_ordering.py  test_models.py  test_openapi_parser.py  test_operation_id.py  test_reference_without_type.py  test_request_body.py
